[project]
name = "pdnd-python-client"
version = "0.1.0"
description = "Client Python per autenticazione e interazione con le API della Piattaforma Digitale Nazionale Dati (PDND)."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Francesco Loreti", email = "francesco.loreti@isprambiente.it"}
]
dependencies = [
    "PyJWT>=2.0.0", "cryptography", "requests"
]

[project.optional-dependencies]
dev = [
    "pytest", "pytest-watch"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
